--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1105,6 +1105,44 @@ button {
   padding-bottom: 50px;
 }
 
+.toast-container {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-top: 0.4em;
+  padding-left: 0.4em;
+  width: 100%;
+  height: 0;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  box-sizing: border-box;
+}
+
+.toast-item {
+  display: inline-flex;
+  margin-bottom: 0.4em;
+  margin-right: 0.9em;
+  padding: 0.4em;
+  border-radius: 0.2em;
+  background-color: rgba(19, 19, 13, 0.87);
+  color: rgb(247, 26, 26);
+}
+
+.toast-item--comebacks {
+  display: inline-flex;
+  margin-bottom: 0.4em;
+  margin-right: 0.9em;
+  padding: 0.4em;
+  border-radius: 0.2em;
+  background-color: rgba(19, 19, 13, 0.87);
+  color: #67e215;
+}
+
 @keyframes shake {
   0%,
   100% {
