--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1112,7 +1112,7 @@ button {
   right: 0;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   padding-top: 0.4em;
   padding-left: 0.4em;
   width: 100%;
@@ -1127,14 +1127,15 @@ button {
   display: inline-flex;
   margin-bottom: 0.4em;
   margin-right: 0.9em;
+  width: 30%;
   padding: 0.4em;
   border-radius: 0.2em;
-  background-color: rgba(19, 19, 13, 0.87);
+  background-color: rgba(19, 19, 13, 0.966);
   color: rgb(247, 26, 26);
 }
 
 .toast-item--comebacks {
-  background-color: rgba(19, 19, 13, 0.87);
+  background-color: rgba(19, 19, 13, 0.966);
   color: #67e215;
 }
 
